# codex-workspace-mcp

./: .gitignore  AI_STATELESS_CONTEXT_DESIGN_LESSON.md  COMPATIBILITY.md  Cargo.toml  README.md  RUST_MCP_GUIDE.md  ai_proxy_config.json.example  build.ps1  fix_go_index_2.py  fix_rust_index.py  fix_ts_all.py  fix_ts_funcs.py  fix_ts_last.py  implementation_plan.md  refactor_go_index.py  refactor_python_index.py  refactor_rust_index.py  refactor_ts_index.py  schema.txt
.claude/: settings.local.json
.codex-workspace-mcp/: codex_state.db  rust_index.json
memory/DEnterpriseProjectAiPptServer_8aecc308/: memories.jsonl
memory/DEnterpriseProjectAiPptView_ae899368/: memories.jsonl
memory/EAiPptView_35359736/: memories.jsonl
memory/EWocBss_b71b1bc8/: memories.jsonl
scratch/: analyze_call.py  analyze_tools.py  check_last_response.py  check_stream_content.py  filter_logs.py  find_large_files.py  find_mcp_config.ps1  fix_tests.py  fix_visibility.py  parse_log.py  parse_log_messages_flow.py  parse_log_tools.py  parse_responses.py  query_app_logs.py  query_logs.py  read_config.ps1  split_ts_index.py
src/: agent.rs  agent_runtime.rs  ai_proxy.rs  architecture_agent.rs  conflict_resolver.rs  database.rs  expert_surgery.rs  format_translate.rs  go_index.rs  index_refresh.rs  index_watcher.rs  main.rs  mcp.rs  memory.rs  proxy.rs  proxy_log.rs  python_index.rs  rust_index.rs  sandbox_diagnostic.rs  skills.rs  symbol_provider.rs  tool_call_registry.rs  tool_display.rs  tool_prepare.rs  tools.rs  ts_index.rs  upstream.rs  verification_harness.rs  vision_preprocess.rs
(+30 files in other folders)
