[package]
name = "codex-workspace-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ignore = "0.4.25"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow = "1.0.102"
chrono = "0.4.42"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
