[package]
name = "codex-workspace-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ignore = "0.4.25"
regex = "1.12.2"
swc_common = "21.0.2"
swc_ecma_ast = "23.0.1"
swc_ecma_parser = "39.1.0"
swc_ecma_visit = "23.0.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
anyhow = "1.0.102"
chrono = "0.4.42"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.12.26", features = ["json"] }
tree-sitter = "0.25.8"
tree-sitter-go = "0.25.0"
syn = { version = "2.0.117", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.45"
rustpython-parser = { version = "0.4.0", default-features = false, features = ["num-bigint"] }
